[package]
name = "fusion-example-rp2350-display"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "rp2350_display"
path = "main.rs"

[features]
default = []
sizing-global-nearest-round-up = []

[dependencies]
fusion-example-rp2350-on-device = { workspace = true }
fusion-pal = { workspace = true, features = ["soc-rp2350"] }
fusion-std = { workspace = true, features = ["soc-rp2350"] }
fusion-sys = { workspace = true, features = ["soc-rp2350"] }
cortex-m = { workspace = true }
cortex-m-rt = { workspace = true }

[lints]
workspace = true
