[package]
name = "fusion-example-rp2350-on-device"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "fusion_example_rp2350_on_device"
path = "lib.rs"

[dependencies]
fusion-firmware = { workspace = true, features = ["soc-rp2350"] }
fusion-hal = { workspace = true }
fusion-pal = { workspace = true, features = ["soc-rp2350"] }
fusion-std = { workspace = true, features = ["soc-rp2350"] }
fusion-sys = { workspace = true, features = ["soc-rp2350"] }

[lints]
workspace = true
