[package]
name = "fusion-rhi"
description = ""
documentation = ""
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["rlib", "dylib"]
path = "RHI.rs"

[dependencies]
fusion-rhi-core = { workspace = true }

[target.'cfg(not(target_vendor = "apple"))'.dependencies.fusion-rhi-vulkan]
workspace = true

[target.'cfg(target_os = "windows")'.dependencies.fusion-rhi-dx12]
workspace = true

[target.'cfg(target_vendor = "apple")'.dependencies.fusion-rhi-metal]
workspace = true

[lints]
workspace = true
